Fixing spacing in footer license
The default english version has a hard-coded full-stop after the
"Creative Commons Attribution-ShareAlike License." link, whereas some
translations don't have a full-stop, causing the license and "Terms
of Service" link to read as one.

This replaces the full-stop with a bullet character and adds some
padding before and after the bullet.

Bug: T178744

--- a/dev/wikipedia.org/assets/postcss/_footer.css
+++ b/dev/wikipedia.org/assets/postcss/_footer.css
@@ -52,6 +52,18 @@
 	text-align: center;
 }
 
+.site-license small:after {
+    content: '\2022'; /* bullet character */
+    display: inline-block;
+    font-size: 1.3rem;
+    line-height: inherit;
+    margin-left: 0.8rem; /* margins differ to account for inline-block white-space */
+    margin-right: 0.5rem;
+}
+.site-license small:last-child:after {
+    display: none;
+}
+
 @media screen and ( max-width: 768px ) {
 
     .footer {
